--- a/README.Rmd
+++ b/README.Rmd
@@ -37,6 +37,19 @@ install.packages(c(
   "dynamicTreeCut"
 ))
 ```
+## Installation
+
+# Install Bioconductor (if not already installed)
+if (!requireNamespace("BiocManager", quietly = TRUE))
+  install.packages("BiocManager")
+
+# Install ComplexHeatmap
+BiocManager::install("ComplexHeatmap")
+
+# Install miRHeat from GitHub
+install.packages("remotes")
+remotes::install_github("bianicoletti/miRHeat")
+
 
 ## 🛠️ **How to Use the Pipeline**
 
